# Semi-External-Landau-Vishkin

./: CMakeLists.txt  README.md  install.sh
benchmark/: CMakeLists.txt  memory_benchmark.cpp  time_benchmark.cpp
example/: CMakeLists.txt  example.cpp
include/lvlib/: Index.hpp  LandauVishkin.hpp  RMQ.hpp  text.hpp  types.hpp
src/: CMakeLists.txt  LandauVishkin.cpp  RMQ.cpp  text.cpp
