add_executable(time_benchmark time_benchmark.cpp)
add_executable(memory_benchmark memory_benchmark.cpp)
target_link_libraries(time_benchmark lv divsufsort pthread)
target_link_libraries(memory_benchmark lv divsufsort pthread malloc_count dl)
install(TARGETS time_benchmark memory_benchmark RUNTIME DESTINATION bin)
